@@ -1,6 +1,8 @@
 v0.7.3 (UNRELESED)
 - Add a high level way to get direct access to a PDF object, including a new executable: pdf_object
+- Fix a hard loop bug caused by a content stream that is missing a final operator
 - Significantly simplified the internal code for encoding conversions
+  - Fixes YACC parsing bug that occurs on Fedora 8's ruby VM
 
 v0.7.2 (20th May 2008)
 - Throw an UnsupportedFeatureError if we try to open an encrypted/secure PDF
@@ -20,7 +22,7 @@ v0.7 (6th May 2008)
 - Behave as expected if the Contents key in a Page Dict is a reference
 - Include some basic metadata callbacks
 - Don't interpret a comment token (%) inside a string as a comment
-- Small fixes to improve 1.9 compatability
+- Small fixes to improve 1.9 compatibility
 - Improved our Zlib deflating to make it slightly more robust - still some more issues to work out though
 - Throw an UnsupportedFeatureError if a pdf that uses XRef streams is opened
 - Added an option to PDF::Reader#file and PDF::Reader#string to enable parsing of only parts of a PDF file(ie. only metadata, etc)
@@ -40,7 +42,7 @@ v0.6.1 (12th March 2008)
   just replace each character with a little box.
 - Use the same little box when invalid characters are found in other encodings instead of throwing an ugly 
   NoMethodError.
-- Added a method to RegisterReceiver that returns all occurances of a callback
+- Added a method to RegisterReceiver that returns all occurrences of a callback
 
 v0.6.0 (27th February 2008)
 - all text is now transparently converted to UTF-8 before being passed to the callbacks.
